--- a/References.bib
+++ b/References.bib
@@ -3477,4 +3477,11 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   note         = {September 18-19},
 }
 
+@Book{OzisikConduction,
+  title     = {{Boundary Value Problems of Heat Conduction}},
+  publisher = {Dover Publications},
+  year      = {2002},
+  author    = {\"{O}zi\c{s}ik, M. Necati},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
