--- a/References.bib
+++ b/References.bib
@@ -260,13 +260,13 @@
 }
 
 @TechReport{Ciani1978,
-  author  = {Ciani, John},
-  title   = {Sea/lake Water Cooling for Naval Facilities},
-  year    = {1978},
-  number  = {Report N-1528},
-  address = {Port Hueneme, CA},
-  pages   = {26},
-  institution  = {Civil Engineering Laboratory},
+  author      = {Ciani, John},
+  title       = {Sea/lake Water Cooling for Naval Facilities},
+  institution = {Civil Engineering Laboratory},
+  year        = {1978},
+  number      = {Report N-1528},
+  address     = {Port Hueneme, CA},
+  pages       = {26},
 }
 
 @Article{CIMMINO2014641,
@@ -303,13 +303,13 @@
 }
 
 @TechReport{Cornell2001,
-  author  = {Cornell},
-  title   = {Lake Source Cooling},
-  year    = {2001},
-  number  = {LSC Project Description},
-  address = {Ithaca NY},
-  pages   = {10},
-  institution  = {Cornell University},
+  author      = {Cornell},
+  title       = {Lake Source Cooling},
+  institution = {Cornell University},
+  year        = {2001},
+  number      = {LSC Project Description},
+  address     = {Ithaca NY},
+  pages       = {10},
 }
 
 @Misc{Cusack2012,
@@ -354,12 +354,12 @@
 }
 
 @TechReport{Eggen2005,
-  author  = {Eggen, G. and Slettahjell, O.},
-  title   = {{In Norwegian---Varmepumpens} Bidrag Til Redusert Energibruk I {Norge}},
-  year    = {2005},
-  number  = {Report 12/2005},
-  address = {Oslo, Norway},
-  institution  = {Norwegian Water Resources and Energy Directorate},
+  author      = {Eggen, G. and Slettahjell, O.},
+  title       = {{In Norwegian---Varmepumpens} Bidrag Til Redusert Energibruk I {Norge}},
+  institution = {Norwegian Water Resources and Energy Directorate},
+  year        = {2005},
+  number      = {Report 12/2005},
+  address     = {Oslo, Norway},
 }
 
 @Article{Eliadis2003,
@@ -381,10 +381,10 @@
 }
 
 @TechReport{Elmahdy1978,
-  author = {Elmahdy, A. H. and Mitalas, G. P.},
-  title  = {Facility for Testing Cooling and Dehumidifying Coils: Description, Procedures, and Test Results},
-  year   = {1978},
+  author      = {Elmahdy, A. H. and Mitalas, G. P.},
+  title       = {Facility for Testing Cooling and Dehumidifying Coils: Description, Procedures, and Test Results},
   institution = {National Research Council of Canada; Division of Building Research},
+  year        = {1978},
 }
 
 @Article{Elmahdy1977,
@@ -531,11 +531,11 @@
 }
 
 @TechReport{Gonthier2012,
-  author = {St{\'e}phane Gonthier},
-  title  = {{GeoPerformX} Thermally Enhanced Pipe for Geothermal Applications},
-  year   = {2012},
+  author      = {St{\'e}phane Gonthier},
+  title       = {{GeoPerformX} Thermally Enhanced Pipe for Geothermal Applications},
   institution = {VersaProfiles},
-  url    = {http://www.igshpa.okstate.edu/membership/members\_only/proceedings/2012/10-4-2012-1030-Session-A-VERSAPROFILES\%20copy.pdf},
+  year        = {2012},
+  url         = {http://www.igshpa.okstate.edu/membership/members\_only/proceedings/2012/10-4-2012-1030-Session-A-VERSAPROFILES\%20copy.pdf},
 }
 
 @Electronic{Google2011,
@@ -667,21 +667,21 @@
 }
 
 @TechReport{Hirshman1979,
-  author  = {Hirshman, Jules and Kirklin, Richard H.},
-  title   = {Feasibility of a District Cooling Systems Using Natural Cold Waters. Final Report},
-  year    = {1979},
-  number  = {ORO 4875-1},
-  address = {Washington D.C.},
-  institution  = {Energy Research and Development Administration},
+  author      = {Hirshman, Jules and Kirklin, Richard H.},
+  title       = {Feasibility of a District Cooling Systems Using Natural Cold Waters. Final Report},
+  institution = {Energy Research and Development Administration},
+  year        = {1979},
+  number      = {ORO 4875-1},
+  address     = {Washington D.C.},
 }
 
 @TechReport{Hirshman1975,
-  author  = {Hirshman, Jules and Whithaus, Douglas A. and Brooks, Irving H.},
-  title   = {Feasibility of a District Cooling System Utilizing Cold Seawater. Phase 1: Final Report},
-  year    = {1975},
-  number  = {T/M727117-1},
-  address = {Washington, D.C.},
-  institution  = {Energy Research and Development Administration},
+  author      = {Hirshman, Jules and Whithaus, Douglas A. and Brooks, Irving H.},
+  title       = {Feasibility of a District Cooling System Utilizing Cold Seawater. Phase 1: Final Report},
+  institution = {Energy Research and Development Administration},
+  year        = {1975},
+  number      = {T/M727117-1},
+  address     = {Washington, D.C.},
 }
 
 @Book{Holman1984,
@@ -690,7 +690,7 @@
   year      = {1984},
   author    = {Holman, J. P. and Gajda Jr, W. J.},
   address   = {New York, NY},
-  edition   = {4\textsuperscript{th}}
+  edition   = {4\textsuperscript{th}},
 }
 
 @Article{Hondzo1993,
@@ -825,7 +825,7 @@
   year      = {2005},
   author    = {Kays, William and Crawford, Michael and Weigand, Bernhard},
   address   = {New York, NY},
-  edition   = {4\textsuperscript{th}}
+  edition   = {4\textsuperscript{th}},
 }
 
 @InProceedings{Keens1977,
@@ -1313,12 +1313,12 @@
 }
 
 @TechReport{Smebye2011,
-  author  = {Smebye, Helge and Midttomme, Kirsti and Stene, Jorn},
-  title   = {{In Norwegian -- Energi} Fra Overflatevann I {Norge} -- Kartlegging Av {\o}konomisk Potensial},
-  year    = {2011},
-  number  = {9/2011},
-  address = {Oslo, Norway},
-  institution  = {Norwegian Water Resources and Energy Directorate},
+  author      = {Smebye, Helge and Midttomme, Kirsti and Stene, Jorn},
+  title       = {{In Norwegian -- Energi} Fra Overflatevann I {Norge} -- Kartlegging Av {\o}konomisk Potensial},
+  institution = {Norwegian Water Resources and Energy Directorate},
+  year        = {2011},
+  number      = {9/2011},
+  address     = {Oslo, Norway},
 }
 
 @Article{Song2007,
@@ -1416,12 +1416,12 @@
 }
 
 @TechReport{Thornton2008,
-  author  = {Thornton, Robert and Miller, Robert and Robinson, Anis and Gillespie, Ken},
-  title   = {Assessing the Actual Energy Efficiency of Building Scale Cooling Systems},
-  year    = {2008},
-  number  = {2008: 8DHC-08-04},
-  address = {Paris, France},
-  institution  = {International Energy Agency},
+  author      = {Thornton, Robert and Miller, Robert and Robinson, Anis and Gillespie, Ken},
+  title       = {Assessing the Actual Energy Efficiency of Building Scale Cooling Systems},
+  institution = {International Energy Agency},
+  year        = {2008},
+  number      = {2008: 8DHC-08-04},
+  address     = {Paris, France},
 }
 
 @InProceedings{Tsou1994,
@@ -1555,13 +1555,13 @@
 }
 
 @TechReport{Smith1998,
-  author   = {Smith, Marvin D.},
-  title    = {Circular Pipe Ground Heat Exchangers -- Slinky Heat Exchanger Performance and Modeling},
-  year     = {1998},
-  number   = {TR-WO3024-21},
-  address  = {3412 Hillview Ave. Palo Alto, CA 94304},
-  abstract = {The Slinky heat exchanger research project was designed to experimentally determine Slinky performance characteristics for use in heat exchanger design. There were three phases to the project. The first tested relative performance of Slinky heat exchangers in spoils backfill with four different pipe arrangements, all with equivalent coil diameters and total feet of pipe, placed in trenches of various lengths. A second series tested the performance of Slinky heat exchangers with a flowable backfill material. Two groups of Slinkys were tested during this phase. One group was installed with flowable fill in four trenches, including a 40-foot trench (500 feet of pipe), 80-foot trench (1000 feet of pipe), 99-foot trench (500 feet of pipe) and 100-foot trench (750 feet of pipe). The second configuration maintained the 99-foot flowable backfill trench, and with it a 40-foot and 99-foot trench from the first test series, along with a 250-foot U-bend in a 6 foot deep horizontal bore. A third series of tests was done using a controlled bench test apparatus on a 40 foot long Slinky with 500 feet of pipe. This report discusses the data and presents a method for incorporating this information into Slinky heat exchanger designs.},
-  institution   = {Electric Power Research Institute},
+  author      = {Smith, Marvin D.},
+  title       = {Circular Pipe Ground Heat Exchangers -- Slinky Heat Exchanger Performance and Modeling},
+  institution = {Electric Power Research Institute},
+  year        = {1998},
+  number      = {TR-WO3024-21},
+  address     = {3412 Hillview Ave. Palo Alto, CA 94304},
+  abstract    = {The Slinky heat exchanger research project was designed to experimentally determine Slinky performance characteristics for use in heat exchanger design. There were three phases to the project. The first tested relative performance of Slinky heat exchangers in spoils backfill with four different pipe arrangements, all with equivalent coil diameters and total feet of pipe, placed in trenches of various lengths. A second series tested the performance of Slinky heat exchangers with a flowable backfill material. Two groups of Slinkys were tested during this phase. One group was installed with flowable fill in four trenches, including a 40-foot trench (500 feet of pipe), 80-foot trench (1000 feet of pipe), 99-foot trench (500 feet of pipe) and 100-foot trench (750 feet of pipe). The second configuration maintained the 99-foot flowable backfill trench, and with it a 40-foot and 99-foot trench from the first test series, along with a 250-foot U-bend in a 6 foot deep horizontal bore. A third series of tests was done using a controlled bench test apparatus on a 40 foot long Slinky with 500 feet of pipe. This report discusses the data and presents a method for incorporating this information into Slinky heat exchanger designs.},
 }
 
 @Article{Fujii2012,
@@ -1587,10 +1587,10 @@
 @Book{1982,
   title     = {Sj{\"o}v{\"a}rmesystem},
   publisher = {Byggforskningsr\r{a}det},
+  year      = {1982},
   number    = {R143:1982},
   series    = {BFR-seminarium maj 1982},
   booktitle = {BFR-seminarium},
-  year      = {1982},
 }
 
 @Article{Javed2011,
@@ -1604,12 +1604,12 @@
 }
 
 @TechReport{Claesson2011,
-  author  = {Johan Claesson},
-  title   = {Multipole Method to Calculate Borehole Thermal Resistances: Mathematical Report},
-  year    = {2011},
-  number  = {2012-06-20},
-  address = {Gothenburg, Sweden},
-  institution  = {Chalmers Technical University},
+  author      = {Johan Claesson},
+  title       = {Multipole Method to Calculate Borehole Thermal Resistances: Mathematical Report},
+  institution = {Chalmers Technical University},
+  year        = {2011},
+  number      = {2012-06-20},
+  address     = {Gothenburg, Sweden},
 }
 
 @Article{ClaessonHelstrom2011,
@@ -1736,11 +1736,11 @@
 }
 
 @TechReport{ClaessonDunand1983,
-  author  = {Johan Claesson and A. Dunand},
-  title   = {Heat Extraction from the Ground by Horizontal Pipes -- a Mathematical Analysis},
-  year    = {1983},
-  address = {Stockholm, Sweden.},
-  institution  = {Swedish Council for Building Research},
+  author      = {Johan Claesson and A. Dunand},
+  title       = {Heat Extraction from the Ground by Horizontal Pipes -- a Mathematical Analysis},
+  institution = {Swedish Council for Building Research},
+  year        = {1983},
+  address     = {Stockholm, Sweden.},
 }
 
 @InBook{SpitlerBernier2016,
@@ -1783,11 +1783,11 @@
 }
 
 @TechReport{BennetClaessonHelstrom1987,
-  author  = {J. Bennet and J. Claesson and G. Helstr{\"o}m},
-  title   = {Multipole Method to Compute the Conductive Heat Flow to and between Pipes in a Composite Cylinder},
-  year    = {1987},
-  address = {Lund, Sweden},
-  institution  = {University of Lund, Department of Building and Mathematical Physics},
+  author      = {J. Bennet and J. Claesson and G. Helstr{\"o}m},
+  title       = {Multipole Method to Compute the Conductive Heat Flow to and between Pipes in a Composite Cylinder},
+  institution = {University of Lund, Department of Building and Mathematical Physics},
+  year        = {1987},
+  address     = {Lund, Sweden},
 }
 
 @Article{MARCOTTE2009392,
@@ -2397,21 +2397,21 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{Deru2011,
-  author  = {Deru, M. and Field, K. and Studer, D. and Benne, K. and Griffith, B. and Torcellini, P. and Liu, B. and Halverson, M. and Winiarski, D. and Rosenberg, M. and Yazdanian, M. and Huang, J. and Crawley, D.},
-  title   = {{U.S. Department of Energy} Commercial Reference Building Models of the National Building Stock},
-  year    = {2011},
-  number  = {TP-5500-46861},
-  address = {Golden, CO.},
-  institution  = {National Renewable Energy Laboratory},
+  author      = {Deru, M. and Field, K. and Studer, D. and Benne, K. and Griffith, B. and Torcellini, P. and Liu, B. and Halverson, M. and Winiarski, D. and Rosenberg, M. and Yazdanian, M. and Huang, J. and Crawley, D.},
+  title       = {{U.S. Department of Energy} Commercial Reference Building Models of the National Building Stock},
+  institution = {National Renewable Energy Laboratory},
+  year        = {2011},
+  number      = {TP-5500-46861},
+  address     = {Golden, CO.},
 }
 
 @TechReport{HammockSullens2017,
-  author  = {Charles W. Hammock and Stephen Sullens},
-  title   = {Coupling Geothermal Heat Pumps with Underground Seasonal Thermal Energy Storage},
-  year    = {2017},
-  number  = {EW-201135},
-  address = {Alexandria, VA},
-  institution  = {Environmental Security Technology Certification Program},
+  author      = {Charles W. Hammock and Stephen Sullens},
+  title       = {Coupling Geothermal Heat Pumps with Underground Seasonal Thermal Energy Storage},
+  institution = {Environmental Security Technology Certification Program},
+  year        = {2017},
+  number      = {EW-201135},
+  address     = {Alexandria, VA},
 }
 
 @PhdThesis{Holmberg2016,
@@ -2788,10 +2788,10 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{RN13,
-  author = {Im, Piljae and Liu, Xiaobing},
-  title  = {Case Study for {ARRA}-funded Ground-source Heat Pump ({GSHP}) Demonstration at {Oakland University}},
-  year   = {2014},
+  author      = {Im, Piljae and Liu, Xiaobing},
+  title       = {Case Study for {ARRA}-funded Ground-source Heat Pump ({GSHP}) Demonstration at {Oakland University}},
   institution = {Oak Ridge National Laboratory},
+  year        = {2014},
 }
 
 @Article{RN14,
@@ -2853,11 +2853,11 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{RN19,
-  author = {Kissock, J. Kelly and Habrel, Jeff S. and Claridge, David E.},
-  title  = {Development of a Toolkit for Calculating Linear, Change-point Linear and Multiple-linear Inverse Building Analysis Energy Models},
-  year   = {2002},
-  number = {Final Report 1050-RP},
+  author      = {Kissock, J. Kelly and Habrel, Jeff S. and Claridge, David E.},
+  title       = {Development of a Toolkit for Calculating Linear, Change-point Linear and Multiple-linear Inverse Building Analysis Energy Models},
   institution = {ASHRAE},
+  year        = {2002},
+  number      = {Final Report 1050-RP},
 }
 
 @InProceedings{Liu2014,
@@ -2955,12 +2955,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{RN51,
-  author = {Nordman, R. and Kleefkens, O. and Riviere, P. and Nowak, T. and Zottl, A. and Arzano-Daurelle, C. and Lehmann, A. and Polyzou, O. and Karytsas, K. and Riederer, P. and Miara, M. and Lindahl, M. and Andersson, K. and Olsson, M.},
-  title  = {Seasonal Performance Factor and Monitoring for Heat Pump Systems in the Building Sector. {SEPEMO-Build} Final Report},
-  year   = {2012},
-  type   = {Report},
-  number = {IEE/08/776/SI2.529222},
+  author      = {Nordman, R. and Kleefkens, O. and Riviere, P. and Nowak, T. and Zottl, A. and Arzano-Daurelle, C. and Lehmann, A. and Polyzou, O. and Karytsas, K. and Riederer, P. and Miara, M. and Lindahl, M. and Andersson, K. and Olsson, M.},
+  title       = {Seasonal Performance Factor and Monitoring for Heat Pump Systems in the Building Sector. {SEPEMO-Build} Final Report},
   institution = {Intelligent Energy Europe},
+  year        = {2012},
+  type        = {Report},
+  number      = {IEE/08/776/SI2.529222},
 }
 
 @Article{RN31,
@@ -3141,11 +3141,11 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{Viquerat2012a,
-  author  = {Viquerat, Pierre-Alain and Lachal, Bernard and Hollmuller, Pierre},
-  title   = {In {French}---connexion Des B{\^a}timents De L'onu Au R{\'e}seau Gln Analyse De La Premi{\`e}re Ann{\'e}e De Fonctionnement},
-  year    = {2012},
-  address = {Geneva, Switzerland},
-  institution  = {Universit{\'e} de Gen{\'e}ve},
+  author      = {Viquerat, Pierre-Alain and Lachal, Bernard and Hollmuller, Pierre},
+  title       = {In {French}---connexion Des B{\^a}timents De L'onu Au R{\'e}seau Gln Analyse De La Premi{\`e}re Ann{\'e}e De Fonctionnement},
+  institution = {Universit{\'e} de Gen{\'e}ve},
+  year        = {2012},
+  address     = {Geneva, Switzerland},
 }
 
 @InProceedings{SpitlerSouthardLiu2017,
@@ -3240,12 +3240,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url      = {http://www.sciencedirect.com/science/article/pii/S0378778817337544},
 }
 
-@misc{GoogleNgrams,
+@Misc{GoogleNgrams,
   author       = {Google},
   title        = {{Google Books Ngrams Viewer}},
+  howpublished = {\url{http://books.google.com/ngrams}},
   year         = {2018},
   publisher    = {Google},
-  howpublished = {\url{http://books.google.com/ngrams}},
 }
 
 @PhdThesis{Cullin2014,
@@ -3256,12 +3256,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   address = {Stillwater, OK},
 }
 
-@misc{DOEWeatherData,
+@Misc{DOEWeatherData,
   author       = {DOE},
   title        = {{Weather Data}},
+  howpublished = {\url{https://energyplus.net/weather}},
   year         = {2018},
   publisher    = {U.S. Department of Energy},
-  howpublished = {\url{https://energyplus.net/weather}},
 }
 
 @Article{NSGA2,
@@ -3309,12 +3309,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{AlberdiPagolaRasmusJensenPoulsenErbs2018,
-  author = {Maria Alberdi-Pagola and Rasmus Lund Jensen and S{\o}ren Poulsen and S{\o}ren Erbs},
-  title  = {Method to obtain g-functions for multiple precast quadratic pile heat exchangers},
-  year   = {2018},
-  number = {243},
+  author      = {Maria Alberdi-Pagola and Rasmus Lund Jensen and S{\o}ren Poulsen and S{\o}ren Erbs},
+  title       = {Method to obtain g-functions for multiple precast quadratic pile heat exchangers},
   institution = {Aalborg University},
-  url    = {http://vbn.aau.dk/files/274763046/Method_to_obtain_g_functions_for_multiple_precast_quadratic_pile_heat_exchangers.pdf},
+  year        = {2018},
+  number      = {243},
+  url         = {http://vbn.aau.dk/files/274763046/Method_to_obtain_g_functions_for_multiple_precast_quadratic_pile_heat_exchangers.pdf},
 }
 
 @Article{REES2015518,
@@ -3475,6 +3475,33 @@ The work reported in the thesis shows that it is fairly simple to apply the theo
   address      = {Stockholm, Sweden},
   organization = {IGSHPA},
   note         = {September 18-19},
+}
+
+@Article{VANDERHEIJDE2017158,
+  author   = {B. van der Heijde and M. Fuchs and C. Ribas Tugores and G. Schweiger and K. Sartor and D. Basciotti and D. Müller and C. Nytsch-Geusen and M. Wetter and L. Helsen},
+  title    = {Dynamic equation-based thermo-hydraulic pipe model for district heating and cooling systems},
+  journal  = {Energy Conversion and Management},
+  year     = {2017},
+  volume   = {151},
+  pages    = {158--169},
+  issn     = {0196-8904},
+  abstract = {Simulation and optimisation of district heating and cooling networks requires efficient and realistic models of the individual network elements in order to correctly represent heat losses or gains, temperature propagation and pressure drops. Due to more recent thermal networks incorporating meshing decentralised heat and cold sources, the system often has to deal with variable temperatures and mass flow rates, with flow reversal occurring more frequently. This paper presents the mathematical derivation and software implementation in Modelica of a thermo-hydraulic model for thermal networks that meets the above requirements and compares it to both experimental data and a commonly used model. Good correspondence between experimental data from a controlled test set-up and simulations using the presented model was found. Compared to measurement data from a real district heating network, the simulation results led to a larger error than in the controlled test set-up, but the general trend is still approximated closely and the model yields results similar to a pipe model from the Modelica Standard Library. However, the presented model simulates 1.7 (for low number of volumes) to 68 (for highly discretized pipes) times faster than a conventional model for a realistic test case. A working implementation of the presented model is made openly available within the IBPSA Modelica Library. The model is robust in the sense that grid size and time step do not need to be adapted to the flow rate, as is the case in finite volume models.},
+  doi      = {10.1016/j.enconman.2017.08.072},
+  keywords = {District heating and cooling, Heat loss, Dynamic thermo-hydraulic model, Modelica, District energy systems, Simulation, Thermal network},
+}
+
+@Article{NGUYEN20191012,
+  author   = {A. Nguyen and P. Elsami-Nejad},
+  title    = {A transient coupled model of a variable speed transcritical CO2 direct expansion ground source heat pump for space heating and cooling},
+  journal  = {Renewable Energy},
+  year     = {2019},
+  volume   = {140},
+  pages    = {1012--1021},
+  issn     = {0960-1481},
+  abstract = {A transient coupled model for a variable speed CO2 direct expansion ground source heat pump (DX-GSHP) is developed. An annual simulation for integrated space heating and cooling of a small residential building located in a Canadian climate is conducted, during which numerous operation parameters are evaluated. The model includes a control strategy that regulates pressures of the fluid, thereby allowing the compression cycle to go from subcritical to transcritical for optimal heat rejection. The model can be used to simulate DX-GSHP systems under various loads and evaluate the effect of dynamic thermal behaviour of the ground on the system performance. The results show that there is a strong thermal short-circuiting within BHE when the system is operating at low mass flow, which hinders the system performance.},
+  doi      = {https://doi.org/10.1016/j.renene.2019.03.110},
+  keywords = {DX-GSHP, Borehole heat exchanger, Direct-expansion, CO heat pump, Variable speed compression},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148119304227},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
